--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Noto+Serif+Makasar&display=swap" rel="stylesheet">
+<!-- <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Noto+Serif+Makasar&display=swap" rel="stylesheet"> -->
 <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Lato:wght@300;400;700&family=Noto+Serif+Makasar&display=swap" rel="stylesheet">
 
     <title>Cocktailer</title>
